--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,6 +7,9 @@ readme = "README.md"
 license = "Apache-2.0"
 description = "A SQL like style pattern matching."
 keywords = ["like", "pattern matching"]
+repository = "https://github.com/cod-technologies/like.git"
+homepage = "https://github.com/cod-technologies/like"
+documentation = "https://docs.rs/like/"
 
 [dev-dependencies]
 criterion = "0.3.3"
